--- a/portfolio-app/frontend/src/App.css
+++ b/portfolio-app/frontend/src/App.css
@@ -25,7 +25,7 @@ body {
 /* Left section: Services */
 .about-section {
   flex: 3; /* 3/4 of the page */
-  background-color: #1e90ff; /* Bright blue background */
+  background-color: #2470bc; /* Bright blue background */
   padding: 2rem;
   color: white;
   display: flex;
